// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense correctly 1`] = `
<p>
  Viewing 
  1
   
  expense
   
  totalling 
  $1500.00
</p>
`;

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<p>
  Viewing 
  3
   
  expenses
   
  totalling 
  $8500.00
</p>
`;
